--- a/MyHome.Web/MyHome.Web.csproj
+++ b/MyHome.Web/MyHome.Web.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\MyHome.ServiceDefaults\MyHome.ServiceDefaults.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="7.15.0" />
+  </ItemGroup>
+
 </Project>
