--- a/MyHome.Core/MyHome.Core.csproj
+++ b/MyHome.Core/MyHome.Core.csproj
@@ -1,14 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
-    <PackageReference Include="Tibber.Sdk" Version="0.5.1-beta" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
+		<PackageReference Include="Tibber.Sdk" Version="0.5.1-beta" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\MyHome.Core.Models\MyHome.Core.Models.csproj" />
+	</ItemGroup>
 
 </Project>
