--- a/MyHome.Web/MyHome.Web.csproj
+++ b/MyHome.Web/MyHome.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyHome.Core.Models\MyHome.Core.Models.csproj" />
     <ProjectReference Include="..\MyHome.ServiceDefaults\MyHome.ServiceDefaults.csproj" />
   </ItemGroup>
 
