--- a/MyHome.ApiService/appsettings.json
+++ b/MyHome.ApiService/appsettings.json
@@ -12,9 +12,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=01f9ce82-2749-434d-9a43-cdd996c12dae;IngestionEndpoint=https://swedencentral-0.in.applicationinsights.azure.com/;ApplicationId=49260d0a-163f-48a9-b79a-7a1b2e373bf0"
-  },
+  "APPLICATIONINSIGHTS_CONNECTION_STRING": "InstrumentationKey=01f9ce82-2749-434d-9a43-cdd996c12dae;IngestionEndpoint=https://swedencentral-0.in.applicationinsights.azure.com/;ApplicationId=49260d0a-163f-48a9-b79a-7a1b2e373bf0",
   "UpLinkCredentials": {
     "ClientIdentifier": "2d8c26b2-b97f-423b-aa5a-695298f98682",
     "ClientSecret": ""
