Refactor and enhance WifiSocket and energy services
- Added `System.Configuration` to `WifiSocketsServiceConfiguration.cs`
- Added validation for `WifiSocketName.Unknown` in `RadiatorServiceConfiguration`
- Updated `Program.cs` with new endpoints and routes
- Modified `EnergyPriceService.cs` condition for fetching prices
- Changed WifiSocket name in `appsettings.json` from "Friggebod" to "Shed"
- Added `Name` property to `ControlStatus`
- Refactored `WifiSocketOptions` to use `WifiSocketName` enum
- Updated `WifiSocketClient` with null check and `WifiSocketName`
- Refactored `WifiSocketsService` for constructor injection
- Updated `MyNavMenu.razor` link text to "Hem"
- Moved `EnergySupplierClient` injection in `Charts.razor`
- Refactored `EnergyPrices.razor` and `Home.razor` to use new components
- Moved `EnergySupplierClient` to `MyHome.Web.HttpClients`
- Added `AddApiClient` method in `ServiceCollectionExtensions.cs`
- Introduced `WifiSocketName` enum in `MyHome.Core.Models.WifiSocket`
- Created `EnergyMeter` and `WifiSocketStatus` components
- Registered clients using `AddApiClient` in `Program.cs`
- Added `WifiSocketClient` in `MyHome.Web.HttpClients`

--- a/MyHome.ApiService/appsettings.json
+++ b/MyHome.ApiService/appsettings.json
@@ -26,7 +26,7 @@
       "BaseAddress": "http://192.168.10.226"
     },
     {
-      "Name": "Friggebod",
+      "Name": "Shed",
       "BaseAddress": "http://192.168.10.234"
     }
   ]
