--- a/MyHome.Core/MyHome.Core.csproj
+++ b/MyHome.Core/MyHome.Core.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
 		<PackageReference Include="Tibber.Sdk" Version="0.5.1-beta" />
 	</ItemGroup>
