--- a/MyHome.Web/appsettings.json
+++ b/MyHome.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiService": {
+    "BaseUrl": "https+http://apiservice"
+  },
   "AllowedHosts": "*"
 }
