Floor heat handling

--- a/MyHome.ApiService/appsettings.json
+++ b/MyHome.ApiService/appsettings.json
@@ -31,5 +31,10 @@
       "Name": "Shed",
       "BaseAddress": "http://192.168.10.234"
     }
-  ]
+  ],
+  "FloorHeater": {
+    "AccessId": "",
+    "ApiSecret": "",
+    "DeviceId": "bf89af6ed493ce99e6ayhe"
+  }
 }
