--- a/MyHome.Core/MyHome.Core.csproj
+++ b/MyHome.Core/MyHome.Core.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
 		<PackageReference Include="Tibber.Sdk" Version="0.5.1-beta" />
+		<PackageReference Include="TuyaNet" Version="1.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
