--- a/MyHome.Core/MyHome.Core.csproj
+++ b/MyHome.Core/MyHome.Core.csproj
@@ -7,10 +7,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="PriceCalculations\Profiles\**" />
+	  <EmbeddedResource Remove="PriceCalculations\Profiles\**" />
+	  <None Remove="PriceCalculations\Profiles\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
-		<PackageReference Include="Tibber.Sdk" Version="0.5.1-beta" />
-		<PackageReference Include="TuyaNet" Version="1.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
