--- a/MyHome.Data/MyHome.Data.csproj
+++ b/MyHome.Data/MyHome.Data.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MQTTnet" Version="5.0.1.1416" />
 		<PackageReference Include="TuyaNet" Version="1.0.3" />
 		<PackageReference Include="Tibber.Sdk" Version="0.5.2-beta" />
 	</ItemGroup>
