Refactor and update configurations and scripts
- Updated `EnergyConsumptionListener` to pass `cancellationToken` explicitly.
- Enhanced audit events endpoint to filter out null results.
- Changed `DeviceId` for "FloorHeater" in `appsettings.json`.
- Upgraded `Tibber.Sdk` version to `0.5.3-beta`.
- Modified default `PublishPath` in `Publish-WebUi.ps1`.
- Updated `Update-WebAppsettings` function with new URL.
- Added `start-apps.sh` script for automated service startup.

--- a/MyHome.ApiService/appsettings.json
+++ b/MyHome.ApiService/appsettings.json
@@ -35,6 +35,6 @@
   "FloorHeater": {
     "AccessId": "",
     "ApiSecret": "",
-    "DeviceId": "bf89af6ed493ce99e6ayhe"
+    "DeviceId": "bfbaba0b4eec04c143b2vk"
   }
 }
